--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.7.2
-dj-database-url==2.1.0
-Django==4.2.2
-django-cors-headers==4.2.0
-django-extensions==3.2.3
-django-filter==23.2
+Django==4.2.6
+django-cors-headers==4.3.0
 djangorestframework==3.14.0
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
-pytz==2023.3
-sqlparse==0.4.4
+PyJWT==1.7.0
 python-dotenv==1.0.0
+pytz==2023.3.post1
+sqlparse==0.4.4
+tzdata==2023.3
+
